# insightpress

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  run.sh  setup.sh  voice.md.example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
config/: feeds.yaml  hashtags.yaml
insightpress/: __init__.py  __main__.py  config.py  main.py  models.py
insightpress/collectors/: __init__.py  hn.py  rss.py
insightpress/drafting/: __init__.py  composer.py  hashtags.py
insightpress/io/: __init__.py  cache.py  used_tracker.py  writer.py
insightpress/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py  prompts.py
insightpress/processing/: __init__.py  dedupe.py  rank.py
